# hypura

./: .gitignore  .gitmodules  404.html  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  RESEARCH_INTEGRATION_PLAN.md  index.html  run-qwen35.cmd  styles.css
.cargo/: config.toml.example
.claude/: settings.local.json
_docs/: 2026-03-23_cursor-handoff_claude-sonnet-4-6.md  2026-03-23_dunce-unc-path-fix_claude-sonnet-4-6.md  2026-03-23_initial-commit-readme-bilingual_claude-sonnet-4-6.md  2026-03-23_windows-build-restart{windows-cuda-port}.md  2026-03-23_windows-wsl2-cuda-port_claude-sonnet-4-6.md  2026-03-24_desktop-hypura-smart-context-hypura-main.md  2026-03-24_openclaw-contextwindow-maxTokens-hypura-main.md  2026-03-24_rtx30-release-publish{release-rtx30-stable-2026-03-24}.md  2026-03-24_rtx30-stable-release-notes.md  2026-03-24_twitter-intro{release-rtx30-stable-2026-03-24}.md  2026-03-24_中枢化hypura-serve-hypura-main.md  2026-03-24_自動起動設定-hypura-main.md  2026-03-24_起動設定更新-hypura-main.md  2026-03-25_serve汎用化{hypura-main}.md  2026-03-27_hypura-build-automation.md  2026-03-27_hypura-turboquant-mathematical-truth-table.md  2026-03-27_turboquant-phase-a-b-implementation-hypura-main.md  2026-03-29_turboquant-attention-path-cleanup_claude-sonnet-4-6.md  2026-03-29_turboquant-kv-codec-llama-cpp-implementation.md  2026-03-30_KoboldCpp-TurboQuant差分監査{hypura-main}.md  2026-03-30_KoboldCpp-TurboQuant統合実装{hypura-main}.md  2026-03-30_KoboldCpp対応{hypura-main}.md  2026-03-30_TurboQuant-CUDA統合{hypura-main}.md  2026-03-30_TurboQuant-GlobalInstall{hypura-main}.md  2026-03-30_TurboQuant-HF2GGUF{hypura-main}.md  2026-03-30_TurboQuant結線判定と実働化{hypura-main}.md  2026-03-30_koboldcpp互換拡張{main}.md  2026-03-30_koboldgui本格寄せ{main}.md  2026-03-30_kobold超え統合追補{main}.md  2026-03-30_rep_pen-stop_sequence実装{main}.md  2026-03-30_sampler完全互換拡張{main}.md  2026-03-31_ENA_E2E生成中断再生成{main}.md  2026-03-31_GGUF起動確認{main}.md  2026-03-31_ggufモデル切替GUI追加{main}.md  2026-03-31_gitignore整理コミットプッシュ{main}.md  2026-03-31_kobold-lite段階運用UIUX強化{main}.md  2026-03-31_koboldcpp同等化GUI先行{main}.md  2026-03-31_llama.cpp置換{main}.md  2026-03-31_llama常用運用整備{main}.md  2026-03-31_semverリリース固め{main}.md  (+42 more)
analysis/: Gemma-4-E4B-Uncensored-HauhauCS-Aggressive-Q4_K_M.inspect.txt  Gemma-4-E4B-Uncensored-HauhauCS-Aggressive-combined.summary.json  Gemma-4-E4B-Uncensored-HauhauCS-Aggressive-combined.summary.md  Huihui-Qwen3.6-35B-A3B-abliterated.Q4_K_M.inspect.txt  Huihui-Qwen3.6-35B-A3B-abliterated.summary.json  Huihui-Qwen3.6-35B-A3B-abliterated.summary.md  mmproj-Gemma-4-E4B-Uncensored-HauhauCS-Aggressive-f16.inspect.txt  supergemma4-Q8_0.inspect.txt  supergemma4-Q8_0.summary.json  supergemma4-Q8_0.summary.md
benchmarks/: BENCHMARK_PLAN.md  CHARTS.md  README.md  gen_charts.py  gen_charts.sh  test_gen_charts.py
benchmarks/results/: 2026-03-13T17-59-17_tinyllama-1.1b-q4_k_m.json  2026-03-17T22-08-07_llama-3.3-70b-q4_k_m.json  2026-03-21T21-26-44_qwen2.5-coder-32b-instruct-q8_0.json  2026-03-21T21-27-54_qwen2.5-coder-32b-instruct-q8_0.json  2026-03-21T21-30-21_qwen2.5-coder-32b-instruct-q8_0.json  2026-03-21T21-32-36_Qwen3-Coder-Next-Q4_K_M.json  2026-03-21T21-51-23_Phi-3.5-MoE-instruct-Q4_K_M.json  2026-03-22T02-03-44_Phi-3.5-MoE-instruct-Q4_K_M.json  2026-04-17T16-01-04_Shadows-MoE-Q6.json  2026-07-14-triality-consensus-v1.0.0.json  (+1 more)
docs/: NC_KA_URT.md  TRIALITY_COUNCIL.md
hypura-desktop/: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
hypura-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
hypura-desktop/src-tauri/capabilities/: default.json
hypura-desktop/src-tauri/src/: lib.rs  main.rs  packaged.rs
hypura-sys/: Cargo.toml  build.rs  wrapper.h
hypura/src/: lib.rs  (+2 more)
kobold_gguf_gui/: Cargo.toml
kobold_gguf_gui/src/: kobold.rs  lib.rs  main.rs  models.rs  server.rs  settings.rs  shared.rs  stream.rs
memory/: MEMORY.md  project_windows_port.md
scripts/: Configure-HypuraCentralShortcut.ps1  build-hypura-c.ps1  build-hypura-hf.ps1  debug-verify-hypura-openclaw.ps1  hypura-build-check.ps1  hypura-central-serve.ps1  hypura-central-smart.ps1  hypura_promote_smoke.py  install_turboquant_global.ps1  koboldcpp-tq.cmd  merge_llama_cpp_upstream.py  package_fullsource.py  run_koboldcpp_turboquant.ps1  stage_release_assets.py  stop-cargo-builds.ps1  stop-cargo.ps1  stop-cargo.sh
src/: compat_assets.rs  lib.rs  main.rs
tests/: cli_council.rs  council_ka_gate.rs  council_memory_budget.rs  council_telemetry.rs  server_triality_council.rs  triality_context_config.rs  triality_runtime_live.rs  turboquant_consensus_metadata.rs
(+118 files in other folders)
