[package]
name = "kobold_gguf_gui"
version = "0.2.0"
edition = "2021"
description = "KoboldCpp-compatible HTTP proxy + GUI; drives llama-server (build from vendor/llama.cpp)."
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kobold_gguf_gui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs = "5"
async-stream = "0.3"
axum = "0.7"
bytes = "1"
eframe = "0.29"
futures-util = "0.3"
http-body-util = "0.1"
egui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dunce = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
tower-http = { version = "0.5", features = ["cors"] }
