[package]
name = "hypura-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri shell: GGUF picker, KoboldCpp / EasyNovelAssistant URLs, spawn hypura serve"
build = "build.rs"

[lib]
name = "hypura_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", features = ["json"] }
